CKS -Study/CKS-Walk-Thru-002/08-cosign-verify-public/signed-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: signed
spec:
  containers:
  - name: cosign
    image: ghcr.io/sigstore/cosign
