CKS -Study/CKS-Walk-Thru-002/08-cosign-verify-public/kyverno-verify-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-sigstore-cosign
spec:
  validationFailureAction: enforce
  background: false
  rules:
    - name: verify-signed
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - image: "ghcr.io/sigstore/cosign*"
          key: "https://Fulcio.sigstore.dev/ghcr.pub"
          mutateDigest: true
